--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -8,7 +8,7 @@
                         <p>
                             {{ .Site.Params.Address1 }}<br>
                             {{ .Site.Params.Address2 }}<br><br>
-                            {{ .Site.Params.Phone }}<br>
+                            <a href="tel:{{ replaceRE "[\\s()-]" "" .Site.Params.Phone }}">{{ .Site.Params.Phone }}</a><br>
                         </p>
                         <div class="social-links mt-3">
                             <a href="{{ .Site.Params.Vk }}" class="vk"><i class="bx bxl-vk"></i></a>
