--- a/src/assets/css/contacts.css
+++ b/src/assets/css/contacts.css
@@ -1,16 +1,12 @@
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
-
-  .contact .info-box {
+  .contacts .info-box {
     color: #444444;
     text-align: center;
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     padding: 20px 0 30px 0;
     background: #fff;
   }
 
-  .contact .info-box i {
+  .contacts .info-box i {
     font-size: 32px;
     color: #556270;
     border-radius: 50%;
@@ -18,12 +14,12 @@
     transition: all 0.3s ease-in-out;     
   }
 
-  .contact .info-box:hover i {
+  .contacts .info-box:hover i {
     background: #556270;
     color: #fff;
   }  
 
-  .contact .info-box h4 {
+  .contacts .info-box h4 {
     font-size: 20px;
     font-weight: 700;
     margin: 10px 0;
@@ -31,10 +27,15 @@
     color: #556270;
   }  
   
-  .contact .info-box p {
+  .contacts .info-box p {
     padding: 0;
     line-height: 24px;
     font-size: 14px;
     margin-bottom: 0;
   }
+
+  .contacts .map {
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+    background: #fff;
+  }  
   
