--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -8,13 +8,14 @@
                         <p>
                             {{ .Site.Params.Address1 }}<br>
                             {{ .Site.Params.Address2 }}<br><br>
-                            <a href="tel:{{ replaceRE "[\\s()-]" "" .Site.Params.Phone }}">{{ .Site.Params.Phone }}</a><br>
+                            {{ .Site.Params.Phone }}<br>
                         </p>
                         <div class="social-links mt-3">
                             <a href="{{ .Site.Params.Vk }}" class="vk"><i class="bx bxl-vk"></i></a>
                             <a href="{{ .Site.Params.Instagram }}" class="instagram"><i class="bx bxl-instagram"></i></a>
                             <a href="{{ .Site.Params.Telegram }}" class="telegram"><i class="bx bxl-telegram"></i></a>
                             <a href="mailto:{{ .Site.Params.Email }}" class="email"><i class='bx bx-envelope'></i></a>
+                            <a href="tel:{{ replaceRE "[\\s()-]" "" .Site.Params.Phone }}" class="phone"><i class='bx bx-phone'></i></a>
                         </div>
                     </div>
                 </div>
